# video-processing

./: .gitignore  Cargo.toml
atom_macro/: Cargo.toml
atom_macro/src/: lib.rs
h264/: Cargo.toml
h264/src/: main.rs  sei.rs  slice_layer.rs  sps.rs
mp4-parser/: Cargo.toml
mp4-parser/src/: lib.rs  reference.rs
mp4-parser/src/atom/: header.rs  media_data_type.rs  mod.rs  track.rs
mp4-parser/src/data_structures/: c_string.rs  matrix.rs  mod.rs  pascal_string.rs
