[package]
name = "h264"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# openh264 = "0.3.1"
mp4-parser = { path = "../mp4-parser" }
mp4 = "0.12.0"
h264-reader = "0.6.0"
bitvec = { path = "../bitvec" }
num-traits = "0.2.15"
aho-corasick = "0.7.20"
